[package]
name = "typed-lang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast2str = { git = "https://github.com/optimalstrategy/ast2str" }
# bumpalo = "3.7.0"
logos = "0.12.0"
codespan-reporting = "0.11.1"
derive_more = "0.99.16"
indoc = "1.0"

[dev-dependencies]
pretty_assertions = "0.7.2"